Version 1.2
- Updated the localization files
- Added custom options menu
- Added joining player panels
- Added better fade-in animation for loading screens
- Added Chinese localization made by CoolLKK 
- Added the ability to disable the waypoint modifications
- Added the options to only show hudpanels of player teammates, or dont show them at all
- Added achievement milestone notifications
- Fixed down counters not setting the maximum amount of downs correctly
- Fixed the pager counter not showing the correct amount of pagers during crime-spree
- Chnaged the equiped weapons on drop-in promts to an icon of the weapon
- Fixed the down counter not updating when the player changes loadouts on the briefing screen
- Fixed challenge notifications not working
- Fixed the timer panel displaying an error as heist name during the Crime-Spree version of Bank heist
- Fixed the width of objectives sometimes being incorrect
- Fixed a crash related to the loading screens and the BeardLib-Editor
- Fixed the stored health meter for ex-president not working correctly
- Fixed hint notifications sometimes coloring wrong parts of the text
- Fixed the player and teammate panels incorrectly showing the player having 0 medicbags when they have no equipment 
- Fixed the exp bar and tracked achievements on the statspanel being too long on 21:9 monitors
- Fixed hudpanels always displaying saws if they were low on ammo

Version 1.1.2 (2017.12.19)
- Added loading screens
- Added tagging notifications for the Tag Team perk-deck
- Added hud effects for the Tag Team perk-deck
- Added the ability for custom hint notifications to use the color names feature
- Added interaction complete animation to name labels
- Added the option to disable the exp bar on the stats screen when you are at max level
- Scoreboard panels will now show the equipped armor of bots if they have them via other mods
- Made hint notifications color bot names as well