@@ -7,6 +7,13 @@ Version 1.2
 - Added the ability to disable the waypoint modifications
 - Added the options to only show hudpanels of player teammates, or dont show them at all
 - Added achievement milestone notifications
+- Added the option to show your trade delay on the scoreboard
+- Fixed a crash with mutators and the tabpanel
+- Fixed a crash with levels and the tabpanel
+- Fixed a crash with assault lines
+- Fixed a crash with the presenter panel
+- Fixed the blackscreen panel sometimes getting created multiple times
+- Fixed blackscreen skip time getting reset to the vanilla value
 - Fixed down counters not setting the maximum amount of downs correctly
 - Fixed the pager counter not showing the correct amount of pagers during crime-spree
 - Chnaged the equiped weapons on drop-in promts to an icon of the weapon
